<resources>
    <string name="app_name">CalcJan27</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_mult">*</string>
    <string name="key_add">+</string>
    <string name="key_div">/</string>
    <string name="key_sub">-</string>
    <string name="hint">Enter something</string>
    <string name="some_error">Some Error</string>
    <string name="theme_one">Theme One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="btn_settings">Choose a Theme</string>
    <string name="btn_man">Man</string>
</resources>