<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@layout/activity_calculator">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        app:cornerRadius="@dimen/corner_radius" />

    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_add"
        style="@style/CalcButton.Action" />

    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sub"
        style="@style/CalcButton.Action" />

    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mult"
        style="@style/CalcButton.Action" />

    <Button
        android:id="@+id/key_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin" />

    <Button
        android:id="@+id/key_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        style="@style/CalcButton.Action" />


</merge>
